projects/speech-detection/styles.css
@import url(../../vendor/normalize.css);
@import url(../../fonts/fonts.css);

@import url(../../images/back-button/back-button.css);

html {
  box-sizing: border-box;
  margin: 0;
}

.page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 100%;
  min-width: 220px;
  min-height: 100vh;
  background-color: black;
  font-family: 'RobotoSlab';
  font-weight: 200;
  box-sizing: border-box;
  margin: 0;
  padding: 36px;
  background-image: url(./images/background.jpeg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: white;
}

.page:after {
  content: '';
  background: radial-gradient(circle, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 6) 100%);
  position: absolute;
  top: 0;
  left: 0;
  min-height: 100%;
  width: 100%;
}

.title {
  z-index: 1;
  text-align: center;
}

.speech {
  background-color: white;
  border-radius: 15px;
  max-width: 50%;
  min-width: 400px;
  min-height: 1em;
  z-index: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 16px 16px;
  max-height: 50vh;
  overflow: scroll;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
}

.utterance {
  color: inherit;
  font-weight: 400;
  text-align: right;
  margin: 0;
  margin-bottom: 4px;
  /* width: 100%; */
  max-width: 400px;
  align-self: flex-end;
  background-color: blue;
  padding: 10px 12px;
  border-radius: 15px;
  line-height: 1.3em;
  position: relative;
}

.utterance:nth-of-type(4n + 3) {
  color: black;
  background-color: rgb(192, 192, 192);
  align-self: flex-start;
  text-align: left;
}

.utterance:last-child {
  margin-bottom: 0;
}

.data {
  margin: 0;
  margin-bottom: 12px;
  font-size: 10px;
  width: 100%;
  text-align: right;
  color: black;
  opacity: 0.3;
  width: 100%;
  padding: 0 10px 0 0;
}

.data:nth-of-type(4n + 4) {
  padding: 0 0 0 10px;
  text-align: left;
}

@media (max-width: 768px) {
  .page {
    padding: 16px;
  }
  .speech {
    max-width: none;
    min-width: 0px;
    width: 100%;
    box-sizing: border-box;
  }
}

/* .overlay {
  position: absolute;
  top: 0;
  left: 0;
  min-height: 100%;
  width: 100%;
  display: none;
  align-items: center;
  justify-content: center;
  background-image: url(./images/stop.jpeg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: white;
  z-index: 4;
  padding: 12px;
  padding: 0;
}

.overlay:after {
  content: "";
  background-color: #362d2499;
  position: absolute;
  top: 0;
  left: 0;
  min-height: 100%;
  width: 100%;
}

@media (max-width: 780px) {
  .overlay {
    display: flex;
  }
  .canvas {
    display: none;
  }
} */

